# spherical-cow

./: .codecov.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: CI.yml  coverage.yml
benches/: sphere_pack.rs
examples/: count_sphere_normal.rs  count_sphere_range.rs  serialize.rs  show_in_cow.rs  show_in_cuboid.rs  show_in_emerald.rs  show_in_sphere.rs  show_sphere_in_sphere.rs  statistics_emerald.rs  statistics_sphere.rs
src/: errors.rs  lib.rs  serialization.rs
src/shapes/: cuboid.rs  mod.rs  sphere.rs
src/util/: mod.rs
tests/: containers.rs  packing.rs  serialization.rs  shapes.rs
