[package]
name = "spherical-cow"
version = "0.1.0"
authors = ["Tim DuBois <tim@neophilus.net>"]
description = "Spherical Cow: High volume fraction sphere packing in arbitrary geometries"
repository = "https://github.com/Libbum/spherical-cow"
readme = "./README.md"
keywords = ["sphere", "packing", "spherepacking", "geometry", "obj"]
license = "MIT/Apache-2.0"

[features]
default = []
dev = ["clippy"]
serde-1 = ["serde", "nalgebra/serde-serialize"]

[dependencies]
rand = "0.4"
nalgebra = "0.13"
serde = { version = "1.0", optional = true }
clippy = {version = "0.0.180", optional = true}

[dev-dependencies]
kiss3d = "0.12"
obj = "0.8.1"
serde_json = "1.0"

[badges]
travis-ci = { repository = "Libbum/spherical-cow", branch = "master" }
codecov = { repository = "Libbum/spherical-cow", branch = "master", service = "github" }

[package.metadata.docs.rs]
features = ["serde-1"]

[[example]]
name = "serialize"
required-features = ["serde-1"]

[[example]]
name = "count_sphere_normal"

[[example]]
name = "count_sphere_range"

[[example]]
name = "show_in_cow"

[[example]]
name = "show_in_cuboid"

[[example]]
name = "show_in_emerald"

[[example]]
name = "show_in_sphere"

[[example]]
name = "statistics_sphere"
